// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`build command builds a simple entry point 1`] = `
---------------------------------
STDOUT
---------------------------------
✔  Finished entry with 0 error(s) and 0 warning(s) in XX time
---------------------------------
entry.js
---------------------------------
"use strict";

// src/entry.tsx
import ReactDOM from "react-dom";

// src/app.tsx
function App() {
  return /* @__PURE__ */ React.createElement("div", null, "Hello world");
}

// src/entry.tsx
ReactDOM.render(
  /* @__PURE__ */ React.createElement(App, null),
  document.getElementById("root")
);

`;

exports[`build command includes referenced CSS from JS 1`] = `
---------------------------------
STDOUT
---------------------------------
✔  Finished entry with 0 error(s) and 0 warning(s) in XX time
---------------------------------
entry.css
---------------------------------
/* src/app.css */
.app {
  background: green;
}

/* src/entry.css */
body {
  background: red;
}

---------------------------------
entry.js
---------------------------------
"use strict";

// src/entry.tsx
import ReactDOM from "react-dom";

// src/app.tsx
function App() {
  return /* @__PURE__ */ React.createElement("div", null, "Hello world");
}

// src/entry.tsx
ReactDOM.render(
  /* @__PURE__ */ React.createElement(App, null),
  document.getElementById("root")
);

`;

exports[`build command includes referenced CSS from entry point 1`] = `
---------------------------------
STDOUT
---------------------------------
✔  Finished entry, style with 0 error(s) and 0 warning(s) in XX time
---------------------------------
entry.js
---------------------------------
"use strict";

// src/entry.tsx
import ReactDOM from "react-dom";

// src/app.tsx
function App() {
  return /* @__PURE__ */ React.createElement("div", null, "Hello world");
}

// src/entry.tsx
ReactDOM.render(
  /* @__PURE__ */ React.createElement(App, null),
  document.getElementById("root")
);

---------------------------------
style.css
---------------------------------
/* styles/app.css */
.app {
  background: green;
}

/* styles/entry.css */
body {
  background: red;
}

`;

exports[`build command supports automatic react runtime 1`] = `
---------------------------------
STDOUT
---------------------------------
✔  Finished entry with 0 error(s) and 0 warning(s) in XX time
---------------------------------
entry.js
---------------------------------
"use strict";
var __getOwnPropNames = Object.getOwnPropertyNames;
var __esm = (fn, res) =>
  function __init() {
    return fn && (res = (0, fn[__getOwnPropNames(fn)[0]])((fn = 0))), res;
  };
var __commonJS = (cb, mod) =>
  function __require() {
    return (
      mod ||
        (0, cb[__getOwnPropNames(cb)[0]])((mod = { exports: {} }).exports, mod),
      mod.exports
    );
  };

// src/app.tsx
import { jsxDEV as _jsxDEV } from "react/jsx-dev-runtime";
function App() {
  return /* @__PURE__ */ _jsxDEV(
    "div",
    {
      children: "Hello world",
    },
    void 0,
    false,
    {
      fileName: "<CWD>/src/app.tsx",
      lineNumber: 3,
      columnNumber: 22,
    },
    this
  );
}
var init_app = __esm({
  "src/app.tsx"() {
    "use strict";
  },
});

// src/entry.tsx
import { jsxDEV as _jsxDEV2 } from "react/jsx-dev-runtime";
import ReactDOM from "react-dom";
var require_entry = __commonJS({
  "src/entry.tsx"(exports) {
    init_app();
    ReactDOM.render(
      /* @__PURE__ */ _jsxDEV2(
        App,
        {},
        void 0,
        false,
        {
          fileName: "<CWD>/src/entry.tsx",
          lineNumber: 4,
          columnNumber: 29,
        },
        exports
      ),
      document.getElementById("root")
    );
  },
});
export default require_entry();

`;
